--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Adventures of the agile philosopher
+title: Epistemology of Agile Development
 email: info@nicolasweinhold.de
 description: > # this means to ignore newlines until "baseurl:"
   The good, the bad and the everyday meltdowns and wonders of building something
