--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ motto: If you stare into waterfall, waterfall stares back to you
 email: info@nicolasweinhold.de
 description: > # this means to ignore newlines until "baseurl:"
   Musings about software development, product management and random things that grab my attention.
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "https://anreizstruktur.github.io" # the base hostname & protocol for your site
 twitter_username: anreizstruktur
 github_username:  anreizstruktur
 # Build settings
